--- a/dreamerteam/webshop/templates/registration/facebook_register.html
+++ b/dreamerteam/webshop/templates/registration/facebook_register.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="container-fluid">
   <div class="row">
-      <div class="col-xs-12 col-md-6 col-md-offset-6">
+      <div class="col-xs-12 col-md-8 col-md-offset-2">
       	<div class="well">
-      		<form class="form" action="{% url 'create_profile' %}" method="post">
+      		<form class="form" action="{% url 'create_group' %}" method="post">
       			{% csrf_token %}
 	      		<h3>Please Select your account type to complete your registration</h3>	
 			  	<div class="form-group">
@@ -14,6 +14,9 @@
 						<option value="Customer">Customer</option>
 						<option value="Developer">Developer</option>
 					</select>
+			    </div>
+			    <div class="form-group clearfix">
+			    	<input type="submit" value="Submit" class="btn btn-primary pull-right" />
 			    </div>
 			</form>
       	</div>
