--- a/dreamerteam/webshop/templates/registration/login_form.html
+++ b/dreamerteam/webshop/templates/registration/login_form.html
@@ -1,8 +1,11 @@
 <div class="row">
-  <div class="col-xs-12 col-md-5 col-md-offset-1" >  
-    {% if user.is_authenticated %}
+  {% if user.is_authenticated %}
+  <div class="col-xs-12">
     <h3>You are already logged in. <a href="{% url 'logout' %}?next={% url 'index' %}">Logout</a></h3>
-    {% else %}
+  </div>
+  {% else %}
+  <div class="col-xs-12 col-md-5 col-md-offset-1" >  
+    
     <div class="well">
       <h3>Login using your account </h3>
       <form class="form-horizontal" action="{% url 'login' %}" method="post">
