--- a/dreamerteam/webshop/templates/webshop/game.html
+++ b/dreamerteam/webshop/templates/webshop/game.html
@@ -32,7 +32,7 @@
                 {{ game.description }}
               </p>
               <p>
-                <span class="text-muted">Game published:</span> <span class="text-info">{{ game.published }}</span>
+                <span>Game published:</span> <span class="text-info">{{ game.published }}</span>
               </p>
             </div>
           </div>
@@ -83,7 +83,7 @@
               {{ game.description }}
             </p>
             <p>
-              <span class="text-muted">Game published:</span> <span class="text-info">{{ game.published }}</span>
+              <span>Game published:</span> <span class="text-info">{{ game.published }}</span>
             </p>
           </div>
           
