fix to dev pages

--- a/dreamerteam/webshop/templates/webshop/game_add_edit_form.html
+++ b/dreamerteam/webshop/templates/webshop/game_add_edit_form.html
@@ -54,8 +54,8 @@
 	    {% endif %}
 	    <div class="form-group">
 	      <div class="col-lg-10 col-lg-offset-2">
-	        <a href="{{ request.META.HTTP_REFERER }}"  class="btn btn-default">Cancel </a>
-	        <input type="submit" value="Submit" class="btn btn-primary" />
+	        <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-default">Cancel </a>
+	        <input type="submit" value="Submit" name="submit" class="btn btn-primary" />
 	      </div>
 	    </div>
 	  </fieldset>
