--- a/dreamerteam/webshop/templates/webshop/game.html
+++ b/dreamerteam/webshop/templates/webshop/game.html
@@ -14,11 +14,9 @@
       <div class="col-xs-12">
         <h3> {{ game.name }}</h3>
         <div class="errorDiv invisible">error</div>
-        
         <iframe width="100px" id = "targetFrame" class="game-iframe" src="{{game.url}}" allowfullscreen></iframe>
       </div>
     </div>
-    
     <br>
     <div id="top10container">
       <div class="row">
@@ -71,7 +69,6 @@
             {% endif %}
           <h3>Game: {{ game.name }} </h3>
           <p>Price: <span class="text-warning">{{ game.price }} €</span></p> 
-            
         </div>
         <br />
         <div class="panel panel-default">
@@ -86,10 +83,22 @@
               <span>Game published:</span> <span class="text-info">{{ game.published }}</span>
             </p>
           </div>
-          
         </div>    
     </div>
   </div>
   {% endif %}
+  <!-- Your share button code -->
+  <div class="fb-share-button" data-href="{% url 'game' game.id %}" data-layout="button_count"></div>
 </div>
+<!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/fi_FI/sdk.js#xfbml=1&version=v2.5";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+</script>
+
 {% endblock %}
