--- a/dreamerteam/webshop/templates/webshop/gamelist.html
+++ b/dreamerteam/webshop/templates/webshop/gamelist.html
@@ -1,6 +1,6 @@
 {% if all_games %}
     {% for game in all_games %}
-    <div class="list-product-wrapper" id="{{game.id}}">
+    <div class="list-product-wrapper clearfix" id="{{game.id}}">
         <div class="product-icon"><i class="glyphicon glyphicon-tower"></i></div>
         <div class="product-title-description">
             <h3>{{game.name}}</h3>
