--- a/dreamerteam/webshop/templates/webshop/dev.html
+++ b/dreamerteam/webshop/templates/webshop/dev.html
@@ -21,10 +21,11 @@
 				    <div class="panel-body">
 				    	{% if games %}
     						{% for game in games %}
-						    	<div class="list-product-wrapper" id="{{game.id}}">
+						    	<div class="list-product-wrapper clearfix" id="{{game.id}}">
 							        <div class="product-title-description">
 							            <h3>{{game.name}}</h3>
 							            <div>{{game.description}}</div>
+							            <div>Total Number of purchases: <!-- change this: --><span class="text-success">{{game.description}}</span></div>
 							        </div>
 							        <div class="list-product-buy-wrapper">	
 							            <a id="{{game.id}}" class="btn btn-primary btn-edit" href="#">Edit</a>
@@ -37,6 +38,22 @@
 						{% endif %}
 				    </div>
 			    </div>
+	        </div>
+	        <div class="col-xs-12 col-md-4">
+	        	<div class="panel panel-success">
+				    <div class="panel-heading">
+				      	<h3 class="panel-title">Game statistics</h3>
+				    </div>
+	        		<div class="panel-body">
+	        			<!-- loop here -->
+	        			<h4>Game Name</h4>
+        				<ul>
+        					<li><b>Purchased date:</b> 22.2.2</li>
+        					<li><b>Price:</b> 22</li>
+        					<li><b>Buyer:</b> iiro</li>
+        				</ul>
+	        		</div>
+	        	</div>
 	        </div>
 	    </div>
 	    <br />
