facebook share description

--- a/dreamerteam/webshop/templates/base.html
+++ b/dreamerteam/webshop/templates/base.html
@@ -22,6 +22,11 @@
 
         <script type="text/javascript"
             src="{% static 'webshop/bootstrap.min.js' %}"></script>
+        <!-- You can use Open Graph tags to customize link previews.
+        Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
+        <meta property="og:title"         content="DreamerTeam Gameshop" />
+        <meta property="og:description"   content="Check this game out in DreamerTeam Gameshop" />
+
 
     {% endblock %}
 </head>
