--- a/dreamerteam/webshop/templates/webshop/game.html
+++ b/dreamerteam/webshop/templates/webshop/game.html
@@ -21,16 +21,16 @@
       </div>
     </div>
     <br>
+      <div class="alert alert-dismissible alert-danger message_error nodisplay">
+        <strong>Oh snap!</strong>
+      </div>
       <div class="alert alert-dismissible alert-success message_save nodisplay">
-
         <strong>Highcore saved!</strong>
       </div>
       <div class="alert alert-dismissible alert-success message_load nodisplay">
-
         <strong>Game loaded!</strong>
       </div>
       <div class="alert alert-dismissible alert-success message_score nodisplay">
-
         <strong>Score saved!</strong>
       </div>
 
