readmen updated, form help text

--- a/dreamerteam/webshop/templates/webshop/game_add_edit_form.html
+++ b/dreamerteam/webshop/templates/webshop/game_add_edit_form.html
@@ -41,6 +41,7 @@
 	      <label for="inputPublishdate" class="col-lg-2 control-label">Publish Date</label>
 	      <div class="col-lg-10">
 	        {{form.published}}
+	        <span class="help-block">Game format YYYY-MM-dd. Example: 2016-02-20</span>
 	        <p class="text-danger">{{form.published.errors|striptags}}</p> 
 	      </div>
 	    </div>
