--- a/dreamerteam/webshop/templates/webshop/game.html
+++ b/dreamerteam/webshop/templates/webshop/game.html
@@ -13,7 +13,9 @@
     {% csrf_token %}
    <div class="row">
       <div class="col-xs-12">
-        <h3> {{ game.name }}</h3>
+        <h3> {{ game.name }} </h3> 
+        <!-- share button code -->
+        <div class="fb-share-button" data-href="{% url 'game' game.id %}" data-layout="button_count"></div>
         <div class="errorDiv invisible">error</div>
 
 
@@ -78,7 +80,6 @@
   {% else %}
     <div class="row">
       <div class="col-md-8 col-xs-12">
-
         <div>
           {% if user.is_authenticated %}
               <button onclick="location.href='{% url 'buy' game.id %}';"
@@ -86,6 +87,8 @@
             {% endif %}
           <h3>Game: {{ game.name }} </h3>
           <p>Price: <span class="text-warning">{{ game.price }} €</span></p>
+          <!-- share button code -->
+          <div class="fb-share-button" data-href="{% url 'game' game.id %}" data-layout="button_count"></div>
         </div>
         <br />
         <div class="panel panel-default">
@@ -105,8 +108,7 @@
     </div>
   </div>
   {% endif %}
-  <!-- Your share button code -->
-  <div class="fb-share-button" data-href="{% url 'game' game.id %}" data-layout="button_count"></div>
+  
 </div>
 <!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
