wrongID page imrpoved

--- a/dreamerteam/webshop/templates/webshop/game.html
+++ b/dreamerteam/webshop/templates/webshop/game.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
+{% block title %}{{ game.name }}{% endblock %}
+
 {% block content %}
 
 <div class="container-fluid">
