project clean up

--- a/dreamerteam/webshop/templates/registration/confirm.html
+++ b/dreamerteam/webshop/templates/registration/confirm.html
@@ -2,7 +2,13 @@
 
 {% block content %}
 
-  <h1>Your account has been confirmed</h1>
-  <p>click <a href="/accounts/login/">here </a> to login </p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>Your account has been confirmed</h1>
+            <p>click <a href="/accounts/login/">here </a> to login </p>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
