--- a/dreamerteam/webshop/templates/registration/confirm_expired.html
+++ b/dreamerteam/webshop/templates/registration/confirm_expired.html
@@ -2,7 +2,13 @@
 
 {% block content %}
 
-  <h1>You have been too late to confirm your email! Please register again!</h1>
-  <p>click <a href="/accounts/register/">here </a> to register </p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>You have been too late to confirm your email! Please register again!</h1>
+            <p>click <a href="/accounts/register/">here </a> to register </p>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
