--- a/dreamerteam/webshop/templates/registration/logged_out.html
+++ b/dreamerteam/webshop/templates/registration/logged_out.html
@@ -1,1 +1,13 @@
-<p>You have successfully logged out</p>
+{% extends "base.html" %}
+
+{% block content %}
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12">
+            <p>You have successfully logged out</p>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
