--- a/dreamerteam/webshop/templates/webshop/search-component.html
+++ b/dreamerteam/webshop/templates/webshop/search-component.html
@@ -7,11 +7,11 @@
 	      	<span class="input-group-btn">
 	        	<button class="btn btn-success" type="button" id="search-button"><span class="glyphicon glyphicon-search"></span></button>
 	      	</span>
-    	</div><!-- /input-group -->
+    	</div>
     </div>
     <div class="col-xs-12 col-md-6">
-    	<div class="filter-control">	
-			<h4>Sort by</h4> 
+    	<div class="filter-control">
+			<h4>Sort by</h4>
 			<select class="form-control" id="order-by">
 	    		<option value="name">Alphabetical</option>
 	    		<option value="price">Price</option>
